# Hugen

./: README.md  pyproject.toml  setup.cfg
hugen/: main.py  pattern_parser.py  tests.py  utils.py
hugen/generator/: base_generator.py  postgres_generator.py
hugen/resources/: generation_schema.txt
hugen/temp/: generation_result.sql
hugen/types_/: custom_enum.py
