[tool.poetry]
name = "Hugen"
version = "0"
description = "Generator of huge data for databases"
authors = ["Victoria Shepard <jawektor37@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
loguru = "^0.5.3"
pydantic = "^1.7.2"

[tool.poetry.dev-dependencies]
pre-commit = "^2.8.2"
mypy = "^0.790"
pytest = "^6.1.2"
python-dateutil = "^2.8.1"

[tool.black]
line-length = 120
target_version = ["py38"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"